using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string ATTACK = "Attack";
    public const string SPECIALATTACK = "Special Attack";
    public const string HIT = "Hit";
    public const string BLOCK = "Block";
    public const string BLOCKHIT = "Block Hit";
    public const string Straf = "Straf";
}

public class Tags
{
    public const string HITTABLE_TAG = "Hittable";
}
